--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "miraiBot",
-	"version": "1.2.14",
+	"version": "1.2.15",
 	"description": "A simple Facebook Messenger Bot made by me(CatalizCS) and my brother SpermLord.",
 	"main": "mirai.js",
 	"scripts": {
@@ -29,7 +29,7 @@
 	},
 	"homepage": "https://github.com/miraipr0ject/miraiv2#readme",
 	"dependencies": {
-		"@maihuybao/fca-unofficial": "",
+		"@hamactruonggiang/fca-xuyen-get": "",
 		"@miraipr0ject/assets": "",
 		"axios": "",
 		"body-parser": "",
@@ -41,7 +41,7 @@
 		"crypto": "",
 		"eval": "",
 		"extract-zip": "",
-		"fca-xuyen-get": "^1.3.15",
+		"fca-xuyen-get": "^1.3.13",
 		"figlet": "",
 		"fs-extra": "^10.0.0",
 		"jimp": "",
@@ -50,9 +50,10 @@
 		"ms": "",
 		"npmlog": "",
 		"path": "",
+		"pm2": "^5.1.0",
 		"readline": "",
 		"request": "",
-		"semver": "^7.3.5",
+		"semver": "",
 		"sequelize": "",
 		"sqlite3": "",
 		"string-similarity": "",
